# SmallEngine

./: .gitignore  CMakeLists.txt  build.bat  clean.bat
ClassDiagram/input/: input.md
container/: CMakeLists.txt  IntrusiveList.hpp  sstd.hpp  typelist.hpp
core/: CMakeLists.txt  IApplication.h  IRuntimeMoudle.h  Win32Application.cpp  Win32Application.h  main.cpp
input/: CMakeLists.txt  IHandleWindowEvent.h  IMouseInput.h  IWindow.h  IWindowEventArgs.h  IkeyboardInput.h  InputSystem.cpp  InputSystem.h  KeyboardInput.h  Win32Window.cpp  Win32Window.h
input/win32/: CMakeLists.txt  Win32InputSystemFactory.cpp  Win32InputSystemFactory.h  Win32KeyboardInput.cpp  Win32KeyboardInput.h  Win32MouseInput.cpp  Win32MouseInput.h  Win32WIndowEventArgs.cpp  Win32Window.cpp  Win32Window.h  Win32WindowEventArgs.h
math/: CMakeLists.txt  VecConcept.hpp  VecConstructor.hpp  point.cpp  point.hpp  swizzle.hpp  test.cpp  vec.hpp  vec2Member.txt  vec3Member.txt  vec4Member.txt
utility/: CMakeLists.txt  CommonDeclare.h  Image.cpp  Image.h  Log.cpp  Log.h  MemoryStatistics.hpp  SEngineAlloctor.hpp  Singleton.hpp  Time.cpp  Time.h  Timer.cpp  Timer.h  VariantVisitor.h
window/: CMakeLists.txt  IWindow.h  Win32Window.cpp  Win32Window.h
